--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1028,7 +1028,7 @@ a.hvr:hover{
     word-wrap: break-word;
     background-color: #fff;
     background-clip: initial;   
-    box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important;
+    box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25) !important;
     border-radius: 20px;
 }
 
@@ -1187,7 +1187,7 @@ ul.nav-h{
 .tagsdt {
     background-color: #B0DEFF;
     color: #000000 !important;
-
+    font-size: 14px !important;
 }
 /* :::::::::::::: END SECTION TAGS ::::::::::::::*/
 
@@ -1214,6 +1214,7 @@ ul.nav-h{
 
 .data-d .tagstittle {
     margin-bottom: 10px;
+    font-size: 14px;
 }
 
 .data-d .col-tags {
@@ -1273,6 +1274,7 @@ div #dd-unduh {
     color: #000000;
     font-weight: 500;
     text-align: left;
+    font-size: 16px;
 }
 
 .dropdown ul.dropdown-unduh button.dropdown-itemunduh:hover{
