--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,18 +1006,18 @@ a.hvr:hover{
 
 .boxdescdt {
     background: #B0DEFF;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25) !important;
     border-radius: 10px;
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 10px !important;
 }
 /* :::::::::::::: END SECTION DESKRIPSI LIHAT DATASET ::::::::::::::*/
 
 /* :::::::::::::: START SECTION HASIL EVALUASI DATASET ::::::::::::::*/
 .content-dtset{
-    padding-bottom: 20px;
+    padding-bottom: 30px;
 }
 
 .card-h{
