--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1345,7 +1345,7 @@ li.page-item {
 }
 
 .pinky {
-    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25) !important;
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -1507,7 +1507,8 @@ li.page-item {
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;  
     overflow: hidden; 
-    margin-bottom: 10px;  
+    margin-bottom: 12px;
+    margin-top: 10px; 
   }
 
   section.decsription-h {
